<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/player_name_give_in"
            android:layout_marginTop="20dp"
            android:id="@+id/tvPlayerGiveInNames"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/layoutOne"
        android:gravity="center">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPlayerOne"
            android:singleLine="true"
            android:hint="@string/player_name_one"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTwo"
        android:gravity="center">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPlayerTwo"
            android:singleLine="true"
            android:hint="@string/player_name_two"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutThree"
        android:gravity="center">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPlayerThree"
            android:singleLine="true"
            android:hint="@string/player_name_three"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutFour"
        android:gravity="center">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPlayerFour"
            android:singleLine="true"
            android:hint="@string/player_name_four"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutFive"
        android:gravity="center">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPlayerFive"
            android:singleLine="true"
            android:hint="@string/player_name_five"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSix"
        android:gravity="center">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPlayerSix"
            android:singleLine="true"
            android:hint="@string/player_name_six"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btNext2"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorBlueText"
            android:background="@color/colorLightGrey"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"/>

    </RelativeLayout>

</LinearLayout>


</ScrollView>