<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/colorLightGrey"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/highscore_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/highscore_ranking_title"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/highscore_player_name_title"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/highscore_points_title"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/highscore_list"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/no_highscores"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center"
                    android:text="@string/highscore_no_old_scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</layout>