<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/title_change_player_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/change_player_layout"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tobiashehrlein.tobiswizardblock.ui.views.PrimaryButton
                android:id="@+id/cancel_change_names"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/cancel" />

            <View
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@color/colorWhite"
                android:layout_width="2dp"
                android:layout_height="match_parent" />


            <com.tobiashehrlein.tobiswizardblock.ui.views.PrimaryButton
                android:id="@+id/confirm_change_names"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/confirm" />


        </LinearLayout>


    </LinearLayout>

</layout>