<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLightGrey"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".StartActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome"
                android:id="@+id/tvWelcome"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


    <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newGameOrLoad"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <Button
                android:id="@+id/btNewGame"
                android:text="@string/new_game"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorBlueText"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:id="@+id/btTest"
                android:text="@string/load_game"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/btNewGame"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorBlueText"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:id="@+id/btHighscore"
                android:text="@string/highscore"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/btTest"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorBlueText"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginBottom="30dp"/>

        </RelativeLayout>

    </LinearLayout>
